--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@ capybara-*.html
 /db/*.sqlite3
 /db/*.sqlite3-journal
 /public/system
+/public/assets
 /coverage/
 /spec/tmp
 *.orig
@@ -46,4 +47,6 @@ bower.json
 
 # Ignore node_modules
 node_modules/
+
+._*
 
